syntax = "proto2";

option java_package = "com.erjiguan.daywordcount";
option java_outer_classname = "ChatMessageProtos";

message ChatMessage {
    required string message = 1;
    required int64 time = 2;
    required string chatPerson = 3;
}

message ChatMessageList {
    repeated ChatMessage chatMessages = 1;
}
